# pygmy

./: .envrc  .gitignore  CHANGELOG  ChangeLog  README.md  README.rst  main.py  requirements.txt  run.py  setup.cfg  shorty.py
conf/: conf-dist.yaml
etc/uwsgi.d/: shorty.ini
pygmy/: pygmy.py  wsgi.py
pygmy/templates/: admin.html  edit.html  error.html  help.html  home.html  links.html  qr.html
shorty/: shorty.py
shorty/sql/: create_namespace_table.sql  create_redirect_table.sql  get_namespace_permissions.sql  get_record_by_keyword.sql  get_redirect_keyword.sql  get_redirect_url.sql  get_shortcuts.sql  insert_default_namespaces.sql  my_create_apppermission_table  my_create_namespace_table.sql  my_create_owner_table.sql  my_create_redirect_table.sql
shorty/templates/: base.html  help.html  home.html  links.html
src/shorty/: shorty.py
templates/: base.html  error.html  help.html  home.html  links.html
tests/: .test_test.py.swp  test_test.py
