[metadata]
name = shorty
author = Alex Kelly - Franklin University
author-email = alex.kelly@franklin.edu
summary = URL shortener built in flask
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://git.admin.franklin.edu/tins/shorty
project_urls =
Bug Tracker = https://git.admin.franklin.edu/tins/shorty/issues
Documentation = 
Source Code = https://git.admin.franklin.edu/tins/shorty
license = MIT
classifier =
Development Status :: 1
Environment :: Console
Intended Audience :: Developers
Operating System :: Linux
Programming Language :: Python
keywords = url
[files]
packages = shorty
data_files =
