[metadata]
name = shorty
author = Alex Kelly - Franklin University
author-email = alex.kelly@franklin.edu
summary = URL shortener built in flask
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://git.admin.franklin.edu/tins/shorty
project_urls =
Bug Tracker = https://git.admin.franklin.edu/tins/shorty/issues
Documentation = 
Source Code = https://git.admin.franklin.edu/tins/shorty
license = MIT
keywords = url shortener flask
classifier =
    Development Status :: 4 - Beta
    Framework :: Flask
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages = shorty
data_files =
    /etc/uwsgi.d = etc/*

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[install] 
prefix=/
install_lib=/some/lib/path
install_scripts=/some/bin/path

